--- a/_sass/minimal-mistakes/_tables.scss
+++ b/_sass/minimal-mistakes/_tables.scss
@@ -35,6 +35,10 @@ th {
   padding: 0.5em;
   font-weight: bold;
   text-align: left;
+  border-top: 1px solid mix(#000, $border-color, 25%);
+  border-bottom: 1px solid mix(#000, $border-color, 25%);
+  border-left: 1px solid mix(#000, $border-color, 25%);
+  border-right: 1px solid mix(#000, $border-color, 25%);  
 }
 
 td {
@@ -45,7 +49,7 @@ td {
 }
 
 // new colour banding
-tr:nth-child(even) {
+tr:nth-child(odd) {
   background-color: #f2f2f2;
 }
 
