--- a/_sass/minimal-mistakes/_tables.scss
+++ b/_sass/minimal-mistakes/_tables.scss
@@ -31,6 +31,7 @@ thead {
 }
 
 th {
+  background-color: #fff;	// different background colour to banded rows
   color: #203764; //new font colour 203764, medium dark blue
   padding: 0.5em;
   font-weight: bold;
