--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+<script src="/assets/js/codeblock.js"></script>
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
